resolved flickering problem added control of the stream source through query arguments

--- a/app/static/client/css/main.css
+++ b/app/static/client/css/main.css
@@ -11,8 +11,6 @@
  body {
   background-color: #222;
   color: #FFF;
-  padding-top: 3em;
-  padding-bottom: 3em;
   font-family: 'Open Sans', sans-serif;
 }
 
